@@ -305,13 +305,7 @@ void ArcImp::draw( KigPainter& p ) const
 
 bool ArcImp::contains( const Coordinate& p, int width, const KigWidget& w ) const
 {
-  if( fabs( (mcenter - p).length() - mradius ) > w.screenInfo().normalMiss( width ) )
-    return false;
-  Coordinate d = p - mcenter;
-  double angle = atan2( d.y, d.x );
-
-  if ( angle < msa ) angle += 2 * M_PI;
-  return angle - msa - ma < 1e-4;
+  return internalContainsPoint( p, w.screenInfo().normalMiss( width ) );
 }
 
 bool ArcImp::inRect( const Rect&, int, const KigWidget& ) const
@@ -541,4 +535,20 @@ const ObjectImpType* VectorImp::type() const
 const ObjectImpType* ArcImp::type() const
 {
   return ArcImp::stype();
+}
+
+bool ArcImp::containsPoint( const Coordinate& p, const KigDocument& ) const
+{
+  return internalContainsPoint( p, test_threshold );
+}
+
+bool ArcImp::internalContainsPoint( const Coordinate& p, double threshold ) const
+{
+  if( fabs( (mcenter - p).length() - mradius ) > threshold )
+    return false;
+  Coordinate d = p - mcenter;
+  double angle = atan2( d.y, d.x );
+
+  if ( angle < msa ) angle += 2 * M_PI;
+  return angle - msa - ma < 1e-4;
 }
