@@ -141,6 +141,9 @@ public:
   double angle() const;
 
   bool equals( const ObjectImp& rhs ) const;
+
+  bool containsPoint( const Coordinate& p, const KigDocument& doc ) const;
+  bool internalContainsPoint( const Coordinate& p, double threshold ) const;
 };
 
 #endif
